Lagt till på server sidan

--- a/server/tasks.json
+++ b/server/tasks.json
@@ -1,1 +1,1 @@
-[]
+[{"id":2,"title":"Grej 1","description":"DFDFDS","dueDate":"2022-12-30","completed":false},{"id":3,"title":"Grej 2","description":"DFDFDS","dueDate":"2022-12-30","completed":false},{"id":4,"title":"Grej 3","description":"DFDFDS","dueDate":"2022-12-30","completed":false},{"id":5,"title":"Grej 4","description":"rwtwert","dueDate":"2022-12-06","completed":false}]
